@@ -1,321 +1,154 @@
-/**
- * Copyright (C) 2009-2015 Typesafe Inc. <http://www.typesafe.com>
+/*
+ * Copyright (C) 2009-2020 Lightbend Inc. <https://www.lightbend.com>
  */
 
 package akka
 
-import java.io.FileInputStream
-import java.io.InputStreamReader
+import java.io.FileReader
+import java.io.{FileInputStream, InputStreamReader}
 import java.util.Properties
+import java.time.format.DateTimeFormatter
+import java.time.ZonedDateTime
+import java.time.ZoneOffset
+import com.lightbend.paradox.projectinfo.ParadoxProjectInfoPluginKeys._
+import com.typesafe.sbt.MultiJvmPlugin.autoImport.MultiJvm
+import sbtassembly.AssemblyPlugin.autoImport._
 
-import akka.TestExtras.GraphiteBuildEvents
-import akka.TestExtras.JUnitFileReporting
-import akka.TestExtras.StatsDMetrics
-import akka.Unidoc.scaladocSettings
-import akka.Unidoc.unidocSettings
-import com.typesafe.sbt.S3Plugin.S3
-import com.typesafe.sbt.S3Plugin.s3Settings
-import com.typesafe.sbt.SbtMultiJvm.MultiJvmKeys.MultiJvm
 import sbt.Keys._
 import sbt._
+import JdkOptions.autoImport._
+import scala.collection.breakOut
 
-object AkkaBuild extends Build {
-  System.setProperty("akka.mode", "test") // Is there better place for this?
+object AkkaBuild {
 
-  // Load system properties from a file to make configuration from Jenkins easier
-  loadSystemProperties("project/akka-build.properties")
+  val enableMiMa = true
 
-  override def buildLoaders = BuildLoader.transform(Sample.buildTransformer) :: Nil
+  val parallelExecutionByDefault = false // TODO: enable this once we're sure it does not break things
 
-  val enableMiMa = false
+  lazy val buildSettings = Def.settings(
+    organization := "com.typesafe.akka",
+    Dependencies.Versions)
 
-  lazy val buildSettings = Seq(
-    organization        := "com.typesafe.akka",
-    version             := "2.4-SNAPSHOT",
-    scalaVersion        := Dependencies.Versions.scalaVersion,
-    crossScalaVersions  := Dependencies.Versions.crossScala
+  lazy val rootSettings = Def.settings(
+    Release.settings,
+    UnidocRoot.akkaSettings,
+    Protobuf.settings,
+    parallelExecution in GlobalScope := System.getProperty("akka.parallelExecution", parallelExecutionByDefault.toString).toBoolean,
+    // used for linking to API docs (overwrites `project-info.version`)
+    ThisBuild / projectInfoVersion := { if (isSnapshot.value) "snapshot" else version.value }
   )
 
-  lazy val root = Project(
-    id = "akka",
-    base = file("."),
-    settings = parentSettings ++ Release.settings ++ unidocSettings ++
-      SphinxDoc.akkaSettings ++ Dist.settings ++ s3Settings ++ scaladocSettings ++
-      GraphiteBuildEvents.settings ++ Protobuf.settings ++ Unidoc.settings(Seq(samples), Seq(remoteTests)) ++ Seq(
-      parallelExecution in GlobalScope := System.getProperty("akka.parallelExecution", "false").toBoolean,
-      Dist.distExclude := Seq(actorTests.id, docs.id, samples.id, osgi.id),
-
-      S3.host in S3.upload := "downloads.typesafe.com.s3.amazonaws.com",
-      S3.progress in S3.upload := true,
-      mappings in S3.upload <<= (Release.releaseDirectory, version) map { (d, v) =>
-        val downloads = d / "downloads"
-        val archivesPathFinder = downloads * s"*$v.zip"
-        archivesPathFinder.get.map(file => (file -> ("akka/" + file.getName)))
-      }
-    ),
-    aggregate = Seq(actor, testkit, actorTests, remote, remoteTests, camel, cluster, clusterMetrics, slf4j, agent,
-      persistence, persistenceTck, kernel, osgi, docs, contrib, samples, multiNodeTestkit, typed)
-  )
-
-  lazy val akkaScalaNightly = Project(
-    id = "akka-scala-nightly",
-    base = file("akka-scala-nightly"),
-    // remove dependencies that we have to build ourselves (Scala STM)
-    // samples don't work with dbuild right now
-    aggregate = Seq(actor, testkit, actorTests, remote, remoteTests, camel, cluster, slf4j,
-      persistence, persistenceTck, kernel, osgi, contrib, multiNodeTestkit, typed)
-  ).disablePlugins(ValidatePullRequest)
-
-  lazy val actor = Project(
-    id = "akka-actor",
-    base = file("akka-actor")
-  )
-
-  lazy val testkit = Project(
-    id = "akka-testkit",
-    base = file("akka-testkit"),
-    dependencies = Seq(actor)
-  )
-
-  lazy val typed = Project(
-    id = "akka-typed-experimental",
-    base = file("akka-typed"),
-    dependencies = Seq(testkit % "compile;test->test")
-  )
-
-  lazy val actorTests = Project(
-    id = "akka-actor-tests",
-    base = file("akka-actor-tests"),
-    dependencies = Seq(testkit % "compile;test->test")
-  )
-
-  lazy val benchJmh = Project(
-    id = "akka-bench-jmh",
-    base = file("akka-bench-jmh"),
-    dependencies = Seq(actor, persistence, testkit).map(_ % "compile;compile->test;provided->test")
-  ).disablePlugins(ValidatePullRequest)
-
-  lazy val remote = Project(
-    id = "akka-remote",
-    base = file("akka-remote"),
-    dependencies = Seq(actor, actorTests % "test->test", testkit % "test->test")
-  )
-
-  lazy val multiNodeTestkit = Project(
-    id = "akka-multi-node-testkit",
-    base = file("akka-multi-node-testkit"),
-    dependencies = Seq(remote, testkit)
-  )
-
-  lazy val remoteTests = Project(
-    id = "akka-remote-tests",
-    base = file("akka-remote-tests"),
-    dependencies = Seq(actorTests % "test->test", multiNodeTestkit)
-  ) configs (MultiJvm)
-
-  lazy val cluster = Project(
-    id = "akka-cluster",
-    base = file("akka-cluster"),
-    dependencies = Seq(remote, remoteTests % "test->test" , testkit % "test->test")
-  ) configs (MultiJvm)
-
-  lazy val clusterMetrics = Project(
-    id = "akka-cluster-metrics",
-    base = file("akka-cluster-metrics"),
-    dependencies = Seq(cluster % "compile->compile;test->test;multi-jvm->multi-jvm", slf4j % "test->compile")
-  ) configs (MultiJvm)
-
-  lazy val slf4j = Project(
-    id = "akka-slf4j",
-    base = file("akka-slf4j"),
-    dependencies = Seq(actor, testkit % "test->test")
-  )
-
-  lazy val agent = Project(
-    id = "akka-agent",
-    base = file("akka-agent"),
-    dependencies = Seq(actor, testkit % "test->test")
-  )
-
-  lazy val persistence = Project(
-    id = "akka-persistence-experimental",
-    base = file("akka-persistence"),
-    dependencies = Seq(actor, remote % "test->test", testkit % "test->test")
-  )
-
-  lazy val persistenceTck = Project(
-    id = "akka-persistence-experimental-tck",
-    base = file("akka-persistence-tck"),
-    dependencies = Seq(persistence % "compile;provided->provided;test->test", testkit % "compile;test->test")
-  )
-
-  lazy val kernel = Project(
-    id = "akka-kernel",
-    base = file("akka-kernel"),
-    dependencies = Seq(actor, testkit % "test->test")
-  )
-
-  lazy val camel = Project(
-    id = "akka-camel",
-    base = file("akka-camel"),
-    dependencies = Seq(actor, slf4j, testkit % "test->test")
-  )
-
-  lazy val osgi = Project(
-    id = "akka-osgi",
-    base = file("akka-osgi"),
-    dependencies = Seq(actor)
-  )
-
-  lazy val docs = Project(
-    id = "akka-docs",
-    base = file("akka-docs"),
-    dependencies = Seq(actor, testkit % "test->test",
-      remote % "compile;test->test", cluster, clusterMetrics, slf4j, agent, camel, osgi,
-      persistence % "compile;provided->provided;test->test", persistenceTck,
-      typed % "compile;test->test")
-  )
-
-  lazy val contrib = Project(
-    id = "akka-contrib",
-    base = file("akka-contrib"),
-    dependencies = Seq(remote, remoteTests % "test->test", cluster, persistence % "compile;test->provided")
-  ) configs (MultiJvm)
-
-  lazy val samples = Project(
-    id = "akka-samples",
-    base = file("akka-samples"),
-    settings = parentSettings ++ ActivatorDist.settings,
-    // FIXME osgiDiningHakkersSampleMavenTest temporarily removed from aggregate due to #16703
-    aggregate = if (!CommandLineOptions.aggregateSamples) Nil else
-      Seq(sampleCamelJava, sampleCamelScala, sampleClusterJava, sampleClusterScala, sampleFsmScala,
-        sampleMainJava, sampleMainScala, sampleMultiNodeScala,
-        samplePersistenceJava, samplePersistenceScala, sampleRemoteJava, sampleRemoteScala)
-  )
-
-  lazy val sampleCamelJava = Sample.project("akka-sample-camel-java")
-  lazy val sampleCamelScala = Sample.project("akka-sample-camel-scala")
-
-  lazy val sampleClusterJava = Sample.project("akka-sample-cluster-java")
-  lazy val sampleClusterScala = Sample.project("akka-sample-cluster-scala")
-
-  lazy val sampleFsmScala = Sample.project("akka-sample-fsm-scala")
-
-  lazy val sampleMainJava = Sample.project("akka-sample-main-java")
-  lazy val sampleMainScala = Sample.project("akka-sample-main-scala")
-
-  lazy val sampleMultiNodeScala = Sample.project("akka-sample-multi-node-scala")
-
-  lazy val samplePersistenceJava = Sample.project("akka-sample-persistence-java")
-  lazy val samplePersistenceScala = Sample.project("akka-sample-persistence-scala")
-
-  lazy val sampleRemoteJava = Sample.project("akka-sample-remote-java")
-  lazy val sampleRemoteScala = Sample.project("akka-sample-remote-scala")
-
-  lazy val osgiDiningHakkersSampleMavenTest = Project(id = "akka-sample-osgi-dining-hakkers-maven-test",
-    base = file("akka-samples/akka-sample-osgi-dining-hakkers-maven-test"),
-    settings = Seq(
-      publishArtifact := false,
-      // force publication of artifacts to local maven repo, so latest versions can be used when running maven tests
-      compile in Compile <<=
-        (publishM2 in actor, publishM2 in testkit, publishM2 in remote, publishM2 in cluster, publishM2 in osgi,
-          publishM2 in slf4j, publishM2 in persistence, compile in Compile) map
-          ((_, _, _, _, _, _, _, c) => c),
-      test in Test ~= { x => {
-        def executeMvnCommands(failureMessage: String, commands: String*) = {
-          if ({List("sh", "-c", commands.mkString("cd akka-samples/akka-sample-osgi-dining-hakkers; mvn ", " ", "")) !} != 0)
-            throw new Exception(failureMessage)
-        }
-        executeMvnCommands("Osgi sample Dining hakkers test failed", "clean", "install")
-      }}
-    )
-  )
-
-  override lazy val settings =
-    super.settings ++
-    buildSettings ++
-    Seq(
-      shellPrompt := { s => Project.extract(s).currentProject.id + " > " }
-    ) ++
-    resolverSettings
-
-  lazy val baseSettings = Defaults.defaultSettings
-
-  lazy val parentSettings = baseSettings ++ Seq(
-    publishArtifact := false
-  )
-
-  lazy val experimentalSettings = Seq(
+  lazy val mayChangeSettings = Seq(
     description := """|This module of Akka is marked as
-                      |experimental, which means that it is in early
+                      |'may change', which means that it is in early
                       |access mode, which also means that it is not covered
-                      |by commercial support. An experimental module doesn't
+                      |by commercial support. An module marked 'may change' doesn't
                       |have to obey the rule of staying binary compatible
                       |between minor releases. Breaking API changes may be
                       |introduced in minor releases without notice as we
-                      |refine and simplify based on your feedback. An
-                      |experimental module may be dropped in major releases
+                      |refine and simplify based on your feedback. Additionally
+                      |such a module may be dropped in major releases
                       |without prior deprecation.
-                      |""".stripMargin
-  )
+                      |""".stripMargin)
 
   val (mavenLocalResolver, mavenLocalResolverSettings) =
     System.getProperty("akka.build.M2Dir") match {
       case null => (Resolver.mavenLocal, Seq.empty)
       case path =>
         // Maven resolver settings
+        def deliverPattern(outputPath: File): String =
+          (outputPath / "[artifact]-[revision](-[classifier]).[ext]").absolutePath
+
         val resolver = Resolver.file("user-publish-m2-local", new File(path))
         (resolver, Seq(
-          otherResolvers := resolver:: publishTo.value.toList,
-          publishM2Configuration := Classpaths.publishConfig(packagedArtifacts.value, None, resolverName = resolver.name, checksums = checksums.in(publishM2).value, logging = ivyLoggingLevel.value)
-        ))
+          otherResolvers := resolver :: publishTo.value.toList,
+          publishM2Configuration := Classpaths.publishConfig(
+            publishMavenStyle.value,
+            deliverPattern(crossTarget.value),
+            if (isSnapshot.value) "integration" else "release",
+            ivyConfigurations.value.map(c => ConfigRef(c.name)).toVector,
+            artifacts = packagedArtifacts.value.toVector,
+            resolverName = resolver.name,
+            checksums = checksums.in(publishM2).value.toVector,
+            logging = ivyLoggingLevel.value,
+            overwrite = true)))
     }
 
-  lazy val resolverSettings = {
+  lazy val resolverSettings = Def.settings(
     // should we be allowed to use artifacts published to the local maven repository
-    if(System.getProperty("akka.build.useLocalMavenResolver", "false").toBoolean)
-      Seq(resolvers += mavenLocalResolver)
-    else Seq.empty
-  } ++ {
+    if (System.getProperty("akka.build.useLocalMavenResolver", "false").toBoolean)
+      resolvers += mavenLocalResolver
+    else Seq.empty,
     // should we be allowed to use artifacts from sonatype snapshots
-    if(System.getProperty("akka.build.useSnapshotSonatypeResolver", "false").toBoolean)
-      Seq(resolvers += Resolver.sonatypeRepo("snapshots"))
-    else Seq.empty
-  } ++ Seq(
-    pomIncludeRepository := (_ => false) // do not leak internal repositories during staging
+    if (System.getProperty("akka.build.useSnapshotSonatypeResolver", "false").toBoolean)
+      resolvers += Resolver.sonatypeRepo("snapshots")
+    else Seq.empty,
+    pomIncludeRepository := (_ => false), // do not leak internal repositories during staging
   )
 
   private def allWarnings: Boolean = System.getProperty("akka.allwarnings", "false").toBoolean
 
-  lazy val defaultSettings = baseSettings ++ resolverSettings ++ TestExtras.Filter.settings ++
-    Protobuf.settings ++ Seq(
+  final val DefaultScalacOptions = Seq(
+    "-encoding", "UTF-8",
+    "-feature",
+    "-unchecked",
+    "-Xlog-reflective-calls",
+    // 'blessed' since 2.13.1
+    "-language:higherKinds")
+
+  // -XDignore.symbol.file suppresses sun.misc.Unsafe warnings
+  final val DefaultJavacOptions = Seq("-encoding", "UTF-8", "-Xlint:unchecked", "-XDignore.symbol.file")
+
+  lazy val defaultSettings: Seq[Setting[_]] = Def.settings(
+    resolverSettings,
+    TestExtras.Filter.settings,
     // compile options
-    scalacOptions in Compile ++= Seq("-encoding", "UTF-8", "-target:jvm-1.6", "-feature", "-unchecked", "-Xlog-reflective-calls", "-Xlint"),
+    scalacOptions in Compile ++= DefaultScalacOptions,
+    scalacOptions in Compile ++=
+      JdkOptions.targetJdkScalacOptions(targetSystemJdk.value, optionalDir(jdk8home.value), fullJavaHomes.value),
     scalacOptions in Compile ++= (if (allWarnings) Seq("-deprecation") else Nil),
-    scalacOptions in Test := (scalacOptions in Test).value.filterNot(_ == "-Xlog-reflective-calls"),
-    // -XDignore.symbol.file suppresses sun.misc.Unsafe warnings
-    javacOptions in compile ++= Seq("-encoding", "UTF-8", "-source", "1.6", "-target", "1.6", "-Xlint:unchecked", "-XDignore.symbol.file"),
+    scalacOptions in Test := (scalacOptions in Test).value.filterNot(opt =>
+      opt == "-Xlog-reflective-calls" || opt.contains("genjavadoc")),
+    javacOptions in compile ++= DefaultJavacOptions ++
+      JdkOptions.targetJdkJavacOptions(targetSystemJdk.value, optionalDir(jdk8home.value), fullJavaHomes.value),
+    javacOptions in test ++= DefaultJavacOptions ++
+      JdkOptions.targetJdkJavacOptions(targetSystemJdk.value, optionalDir(jdk8home.value), fullJavaHomes.value),
     javacOptions in compile ++= (if (allWarnings) Seq("-Xlint:deprecation") else Nil),
-    javacOptions in doc ++= Seq("-encoding", "UTF-8", "-source", "1.6"),
-    incOptions := incOptions.value.withNameHashing(true),
+    javacOptions in doc ++= Seq(),
 
     crossVersion := CrossVersion.binary,
 
+    // Adds a `src/main/scala-2.13+` source directory for Scala 2.13 and newer
+    // and a `src/main/scala-2.13-` source directory for Scala version older than 2.13
+    unmanagedSourceDirectories in Compile += {
+      val sourceDir = (sourceDirectory in Compile).value
+      CrossVersion.partialVersion(scalaVersion.value) match {
+        case Some((2, n)) if n >= 13 => sourceDir / "scala-2.13+"
+        case _                       => sourceDir / "scala-2.13-"
+      }
+    },
+
     ivyLoggingLevel in ThisBuild := UpdateLogging.Quiet,
 
-    licenses := Seq(("Apache License, Version 2.0", url("http://www.apache.org/licenses/LICENSE-2.0"))),
-    homepage := Some(url("http://akka.io/")),
+    licenses := Seq(("Apache-2.0", url("https://www.apache.org/licenses/LICENSE-2.0.html"))),
+    homepage := Some(url("https://akka.io/")),
+    description := "Akka is a toolkit for building highly concurrent, distributed, and resilient message-driven applications for Java and Scala.",
+    scmInfo := Some(ScmInfo(
+      url("https://github.com/akka/akka"),
+      "scm:git:https://github.com/akka/akka.git",
+      "scm:git:git@github.com:akka/akka.git",
+    )),
+    apiURL := Some(url(s"https://doc.akka.io/api/akka/${version.value}")),
 
     initialCommands :=
       """|import language.postfixOps
          |import akka.actor._
-         |import ActorDSL._
          |import scala.concurrent._
          |import com.typesafe.config.ConfigFactory
          |import scala.concurrent.duration._
          |import akka.util.Timeout
          |var config = ConfigFactory.parseString("akka.stdout-loglevel=INFO,akka.loglevel=DEBUG,pinned{type=PinnedDispatcher,executor=thread-pool-executor,throughput=1000}")
-         |var remoteConfig = ConfigFactory.parseString("akka.remote.netty{port=0,use-dispatcher-for-io=akka.actor.default-dispatcher,execution-pool-size=0},akka.actor.provider=akka.remote.RemoteActorRefProvider").withFallback(config)
+         |var remoteConfig = ConfigFactory.parseString("akka.remote.classic.netty{port=0,use-dispatcher-for-io=akka.actor.default-dispatcher,execution-pool-size=0},akka.actor.provider=remote").withFallback(config)
          |var system: ActorSystem = null
          |implicit def _system = system
          |def startSystem(remoting: Boolean = false) { system = ActorSystem("repl", if(remoting) remoteConfig else config); println("don’t forget to system.terminate()!") }
@@ -326,41 +159,98 @@ object AkkaBuild extends Build {
     /**
      * Test settings
      */
+    fork in Test := true,
 
-    parallelExecution in Test := System.getProperty("akka.parallelExecution", "false").toBoolean,
+    // default JVM config for tests
+    javaOptions in Test ++= {
+      val defaults = Seq(
+        // ## core memory settings
+        "-XX:+UseG1GC",
+        // most tests actually don't really use _that_ much memory (>1g usually)
+        // twice used (and then some) keeps G1GC happy - very few or to no full gcs
+        "-Xms3g", "-Xmx3g",
+        // increase stack size (todo why?)
+        "-Xss2m",
+
+        // ## extra memory/gc tuning
+        // this breaks jstat, but could avoid costly syncs to disc see http://www.evanjones.ca/jvm-mmap-pause.html
+        "-XX:+PerfDisableSharedMem",
+        // tell G1GC that we would be really happy if all GC pauses could be kept below this as higher would
+        // likely start causing test failures in timing tests
+        "-XX:MaxGCPauseMillis=300",
+        // nio direct memory limit for artery/aeron (probably)
+        "-XX:MaxDirectMemorySize=256m",
+
+        // faster random source
+        "-Djava.security.egd=file:/dev/./urandom")
+
+      if (sys.props.contains("akka.ci-server"))
+        defaults ++ Seq("-XX:+PrintGCTimeStamps", "-XX:+PrintGCDetails")
+      else
+        defaults
+    },
+
+    // all system properties passed to sbt prefixed with "akka." will be passed on to the forked jvms as is
+    javaOptions in Test := {
+      val base = (javaOptions in Test).value
+      val akkaSysProps: Seq[String] =
+        sys.props.filter(_._1.startsWith("akka"))
+          .map { case (key, value) => s"-D$key=$value" }(breakOut)
+
+      base ++ akkaSysProps
+    },
+
+    // with forked tests the working directory is set to each module's home directory
+    // rather than the Akka root, some tests depend on Akka root being working dir, so reset
+    testGrouping in Test := {
+      val original: Seq[Tests.Group] = (testGrouping in Test).value
+
+      original.map { group =>
+        group.runPolicy match {
+          case Tests.SubProcess(forkOptions) =>
+            group.copy(runPolicy = Tests.SubProcess(forkOptions.withWorkingDirectory(
+              workingDirectory = Some(new File(System.getProperty("user.dir"))))))
+          case _ => group
+        }
+      }
+    },
+
+    parallelExecution in Test := System.getProperty("akka.parallelExecution", parallelExecutionByDefault.toString).toBoolean,
     logBuffered in Test := System.getProperty("akka.logBufferedTests", "false").toBoolean,
 
     // show full stack traces and test case durations
     testOptions in Test += Tests.Argument("-oDF"),
 
-    // don't save test output to a file
-    testListeners in (Test, test) := Seq(TestLogger(streams.value.log, {_ => streams.value.log }, logBuffered.value)),
+    mavenLocalResolverSettings,
+    docLintingSettings,
+    JdkOptions.targetJdkSettings,
 
-    // -v Log "test run started" / "test started" / "test run finished" events on log level "info" instead of "debug".
-    // -a Show stack traces and exception class name for AssertionErrors.
-    testOptions += Tests.Argument(TestFrameworks.JUnit, "-v", "-a")
-  ) ++
-    mavenLocalResolverSettings ++
-    JUnitFileReporting.settings ++ StatsDMetrics.settings
+    // a workaround for https://github.com/akka/akka/issues/27661
+    // see also project/Protobuf.scala that introduces /../ to make "intellij happy"
+    MultiJvm / assembly / fullClasspath := {
+      val old = (MultiJvm / assembly / fullClasspath).value.toVector
+      val files = old.map(_.data.getCanonicalFile).distinct
+      files map { x => Attributed.blank(x) }
+    },
+  )
 
-  def akkaPreviousArtifact(id: String): Def.Initialize[Option[sbt.ModuleID]] = Def.setting {
-    if (enableMiMa) {
-      // Note: This is a little gross because we don't have a 2.3.0 release on Scala 2.11.x
-      // This should be expanded if there are more deviations.
-      val version: String =
-        scalaBinaryVersion.value match {
-          case "2.11" => "2.3.2"
-          case _ =>      "2.3.0"
-        }
-      val fullId = crossVersion.value match {
-        case _ : CrossVersion.Binary => id + "_" + scalaBinaryVersion.value
-        case _ : CrossVersion.Full => id + "_" + scalaVersion.value
-        case CrossVersion.Disabled => id
-      }
-      Some(organization.value % fullId % version) // the artifact to compare binary compatibility with
+  private def optionalDir(path: String): Option[File] =
+    Option(path).filter(_.nonEmpty).map { path =>
+      val dir = new File(path)
+      if (!dir.exists)
+        throw new IllegalArgumentException(s"Path [$path] not found")
+      dir
     }
-    else None
-  }
+
+  lazy val docLintingSettings = Seq(
+    javacOptions in compile ++= Seq("-Xdoclint:none"),
+    javacOptions in test ++= Seq("-Xdoclint:none"),
+    javacOptions in doc ++= {
+      if (JdkOptions.isJdk8) Seq("-Xdoclint:none")
+      else Seq("-Xdoclint:none", "--ignore-source-errors")
+    }
+  )
+
 
   def loadSystemProperties(fileName: String): Unit = {
     import scala.collection.JavaConverters._
@@ -375,4 +265,5 @@ object AkkaBuild extends Build {
     }
   }
 
+  def majorMinor(version: String): Option[String] = """\d+\.\d+""".r.findFirstIn(version)
 }
